# pyaga8

./: Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: python-package-run-tests.yml  python-package.yml  release.yml  test-build-and-release.yml  test-release.yml
src/: lib.rs
tests/: test_aga8.py
